--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "action": { "default_popup": "index.html" },
   "content_scripts": [
     {
-      "js": ["src/content.ts"],
+      "js": ["src/scripts/content.ts"],
       "matches": ["https://www.conflictnations.com/*"]
     }
   ],
